@@ -27,7 +27,7 @@ EXTERN_C int videoimgwidth;
 EXTERN_C int videoimgheight; 
 EXTERN_C int captureperiod;
 EXTERN_C int timeout;
-EXTERN_C BOOL bUDP;
 EXTERN_C BOOL bWindowResizedFromServer;
+EXTERN_C BOOL bUDP;
 
 #endif // GLOBALS_H
